fix header on mobile

--- a/src/components/Header/style.scss
+++ b/src/components/Header/style.scss
@@ -1,5 +1,5 @@
 header{
-    display: flex;
+    display: flex !important;
     align-items: center;
     padding-left: 31px;
     padding-top: 22px;
